# trajectory_utils

./: CMakeLists.txt  README  README.md  package.xml
example/: exampleOpenSoT.cpp  exampleTrjPublisher.cpp
include/trajectory_utils/: trajectory_utils.h
include/trajectory_utils/ros_nodes/: trj_designer.h
include/trajectory_utils/utils/: ros_trj_publisher.h
launch/: SketchIt.launch  TrajXBotGui.launch  designit.launch  example.launch  exampleCOGIMON_LEGS.launch  exampleCOMAN.launch  exampleICUB.launch  exampleWALKMAN.launch  exampleYUMI.launch
msg/: Cartesian.msg  CartesianTrj.msg  segment.msg  segmentTrj.msg
python/: joint_states_topic_to_param.py
src/: trajectory_utils.cpp
src/ros_nodes/: trj_designer.cpp
src/utils/: ros_trj_publisher.cpp
tests/: CMakeLists.txt  testArcTrj.cpp  testLinearPlusArcTrj.cpp  testLinearTrj.cpp  testSplineVelProfile.cpp  testTrjDesigOpenSoT.cpp
